fix bug #72024 (microtime() leaks memory)